--- a/detail12.html
+++ b/detail12.html
@@ -29,6 +29,7 @@
         .heroes {
             position: relative;
             margin-bottom: 0;
+            /* Reset margin bottom */
             background-color: #ffffff;
         }
 
@@ -424,12 +425,12 @@
 
     <!-- Hero Section -->
     <section class="section heroes" aria-label="home">
-        <img src="assets/images/artikel1.png" alt="Banner Artikel">
+        <img src="assets/images/obat1.jpg" alt="Banner Artikel">
         <div class="containers">
             <div class="hero-content">
-                <span class="garis">STRESS</span>
-                <h1 class="headline-lg hero-title text-center" data-reveal="left">Membangun Kepedulian Terhadap Kesehatan Mental</h1>
-                <p class="sub-hero">Dens > 26 Mei 2024 > 11,3rb Melihat</p>
+                <span class="garis">OBAT</span>
+                <h1 class="headline-lg hero-title text-center" data-reveal="left">Obat Buspirone</h1>
+                <p class="sub-hero">dr. Kevin Adrian > 03 November 2023 > 16rb Melihat</p>
             </div>
             <ul class="social-list1">
                 <li><a href="#" class="social-link1"><ion-icon name="logo-facebook"></ion-icon></a></li>
@@ -442,31 +443,33 @@
         <!-- New Information Section -->
         <section class="article-info">
             <div class="container">
-                <h2 class="info-title">Hari Kesehatan Jiwa
-                    Sedunia</h2>
+                <h2 class="info-title"> Buspirone </h2>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Buspirone adalah obat untuk mengatasi gangguan kecemasan umum. Obat ini dapat meredakan gejala kecemasan, seperti gelisah, mudah tersinggung, pusing, sulit tidur, atau jantung berdebar-debar.</p>
                 <p class="info-text" style="font-family: var(--ff-Oswald);">
-                    Menurut WHO, kesehatan mental atau Mental Health adalah keadaan sejahtera setiap individu, dalam
-                    mewujudkan potensi diri sendiri. Dalam perkembangannya, adanya kepedulian serta perhatian khusus
-                    yang diberikan oleh masyarakat, telah mendorong terciptanya gagasan WFMH (World Federation of Mental
-                    Health) untuk menetapkan Hari Kesehatan Jiwa Sedunia (HKJS) yang diperingati setiap tanggal 10
-                    Oktober sejak tahun 1992. <br> <br>
-
-                    Masih sama dengan 2 tahun kebelakang, bahwa perayaan Hari Kesehatan Mental Sedunia (World Mental
-                    Health Day) yang dilaksanakan pada tahun ini masih dalam situasi pandemi Covid-19, namun hal
-                    tersebut justru menjadi momentum tepat untuk mengkampanyekan kesadaran masyarakat bahwa menjaga
-                    kesehatan mental sama pentingnya dengan kesehatan fisik dalam hidup berdampingan dengan Covid-19.
-                    Dengan mengusung tema "Mental health care for all: let's make it a reality" atau "Perawatan
-                    kesehatan mental untuk semua: mari kita wujudkan.” Diharapkan menimbulkan kesadaran yang lebih
-                    kepada masyarakat mengenai penting nya menjaga dan memperhatikan kesehatan mental, agar stigma dan
-                    diskriminasi pada kesenjangan pengobatan dapat segera diperbaiki. <br><br>
-
-                    Masalah kesehatan jiwa dan mental masyarakat yang cenderung meningkat di masa pandemi COVID-19,
-                    membutuhkan kesadaran dan perhatian bersama. Upaya memelihara kesehatan mental dinilai penting guna
-                    menjaga imunitas tubuh. Sehingga dengan demikian, menjaga kesehatan mental di tengah pandemi
-                    Covid-19 dengan menerima dan tidak menyangkal fakta yang ada, serta usaha beradaptasi terhadap
-                    perubahan menjadi penting agar tidak menimbulkan kemungkinan gangguan kesehatan mental yang lebih
-                    serius.
+                    Buspirone termasuk dalam kelompok obat antiansietas atau obat penenang. Obat ini bekerja dengan cara menyeimbangkan kadar dopamin dan serotonin di otak. Dopamin dan serotonin adalah hormon di otak (neurotransmitter) yang berperan dalam mengatur suasana hati.
                 </p>
+                <br><br>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Peringatan Sebelum Mengonsumsi Buspirone</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Sebelum mengonsumsi buspirone, Anda perlu memperhatikan beberapa hal berikut:</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li>1. Beri tahu dokter riwayat alergi yang Anda miliki. Buspirone tidak boleh diminum oleh orang yang memiliki alergi terhadap obat ini.</li>
+                    <li>2. Beri tahu dokter jika Anda pernah atau sedang menderita penyakit ginjal, penyakit hati, epilepsi, glaukoma sudut tertutup, myasthenia gravis, gangguan makan, gangguan bipolar, dan penyakit Parkinson.</li>
+                    <li>3. Informasikan kepada dokter jika Anda sedang menggunakan obat golongan monoamine oxidase inhibitors (MAOI), seperti isocarboxazid atau selegiline. Buspirone tidak boleh digunakan oleh orang yang sedang atau baru saja minum obat tersebut.</li>
+                    <li>4. Jangan langsung mengemudi atau melakukan aktivitas lain yang memerlukan kewaspadaan setelah mengonsumsi buspirone. Obat ini dapat menyebabkan pusing dan kantuk.</li>
+                    <li>5. Hindari konsumsi grapefruit atau jus buah tersebut jika sedang menjalani pengobatan dengan buspirone karena bisa menyebabkan timbulnya efek samping.</li>
+                    <li>6. Diskusikan dengan dokter terkait penggunaan obat ini jika Anda sedang hamil, menyusui, atau merencanakan kehamilan.</li>
+                    <li>7. Informasikan kepada dokter jika Anda sedang menggunakan obat lain, termasuk suplemen atau produk herbal. Tujuannya adalah untuk mengantisipasi terjadinya interaksi antarobat.</li>
+                    <li>8. Segera temui dokter jika Anda mengalami reaksi alergi obat setelah mengonsumsi buspirone.</li>
+                </ul>
+                <br><br>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
+                    <strong>Dosis dan Aturan Pakai Buspirone</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
+                    Dosis buspirone akan ditentukan oleh dokter berdasarkan kondisi pasien. Berikut ini adalah dosis umum penggunaan buspirone untuk mengatasi gangguan kecemasan:</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li><strong> • Dewasa:</strong> dosis awal 5 mg 3 kali sehari atau 7,5 mg 2 kali sehari. Dosis dapat ditingkatkan secara bertahap sebanyak 5 mg dengan jarak 2-3 hari. Dosis biasa: 15-30 mg per hari yang dapat dikonsumsi dalam dosis terbagi. Dosis maksimal 60 mg tiap hari.</li>
+                </ul>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Perlu diketahui bahwa buspirone hanya digunakan untuk jangka pendek. Efektivitas obat ini biasanya baru akan terlihat ketika obat ini dikonsumsi dalam waktu sekitar 3 atau 4 minggu.</p>
             </div>
         </section>
     </section>
