--- a/detail13.html
+++ b/detail13.html
@@ -29,6 +29,7 @@
         .heroes {
             position: relative;
             margin-bottom: 0;
+            /* Reset margin bottom */
             background-color: #ffffff;
         }
 
@@ -424,12 +425,12 @@
 
     <!-- Hero Section -->
     <section class="section heroes" aria-label="home">
-        <img src="assets/images/artikel1.png" alt="Banner Artikel">
+        <img src="assets/images/obat2.jpg" alt="Banner Artikel">
         <div class="containers">
             <div class="hero-content">
-                <span class="garis">STRESS</span>
-                <h1 class="headline-lg hero-title text-center" data-reveal="left">Membangun Kepedulian Terhadap Kesehatan Mental</h1>
-                <p class="sub-hero">Dens > 26 Mei 2024 > 11,3rb Melihat</p>
+                <span class="garis">OBAT</span>
+                <h1 class="headline-lg hero-title text-center" data-reveal="left">ObatT Antidepresan</h1>
+                <p class="sub-hero">dr. Meva Nareza T > 01 Agustus 2022 > 16rb Melihat</p>
             </div>
             <ul class="social-list1">
                 <li><a href="#" class="social-link1"><ion-icon name="logo-facebook"></ion-icon></a></li>
@@ -442,31 +443,45 @@
         <!-- New Information Section -->
         <section class="article-info">
             <div class="container">
-                <h2 class="info-title">Hari Kesehatan Jiwa
-                    Sedunia</h2>
-                <p class="info-text" style="font-family: var(--ff-Oswald);">
-                    Menurut WHO, kesehatan mental atau Mental Health adalah keadaan sejahtera setiap individu, dalam
-                    mewujudkan potensi diri sendiri. Dalam perkembangannya, adanya kepedulian serta perhatian khusus
-                    yang diberikan oleh masyarakat, telah mendorong terciptanya gagasan WFMH (World Federation of Mental
-                    Health) untuk menetapkan Hari Kesehatan Jiwa Sedunia (HKJS) yang diperingati setiap tanggal 10
-                    Oktober sejak tahun 1992. <br> <br>
-
-                    Masih sama dengan 2 tahun kebelakang, bahwa perayaan Hari Kesehatan Mental Sedunia (World Mental
-                    Health Day) yang dilaksanakan pada tahun ini masih dalam situasi pandemi Covid-19, namun hal
-                    tersebut justru menjadi momentum tepat untuk mengkampanyekan kesadaran masyarakat bahwa menjaga
-                    kesehatan mental sama pentingnya dengan kesehatan fisik dalam hidup berdampingan dengan Covid-19.
-                    Dengan mengusung tema "Mental health care for all: let's make it a reality" atau "Perawatan
-                    kesehatan mental untuk semua: mari kita wujudkan.” Diharapkan menimbulkan kesadaran yang lebih
-                    kepada masyarakat mengenai penting nya menjaga dan memperhatikan kesehatan mental, agar stigma dan
-                    diskriminasi pada kesenjangan pengobatan dapat segera diperbaiki. <br><br>
-
-                    Masalah kesehatan jiwa dan mental masyarakat yang cenderung meningkat di masa pandemi COVID-19,
-                    membutuhkan kesadaran dan perhatian bersama. Upaya memelihara kesehatan mental dinilai penting guna
-                    menjaga imunitas tubuh. Sehingga dengan demikian, menjaga kesehatan mental di tengah pandemi
-                    Covid-19 dengan menerima dan tidak menyangkal fakta yang ada, serta usaha beradaptasi terhadap
-                    perubahan menjadi penting agar tidak menimbulkan kemungkinan gangguan kesehatan mental yang lebih
-                    serius.
+                <h2 class="info-title"> Antidepresan</h2>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Antidepresan adalah obat yang digunakan untuk menangani depresi. Obat ini bekerja dengan cara menyeimbangkan senyawa kimia alami di dalam otak yang disebut neurotransmiter. Cara kerja ini bisa membantu memperbaiki dan menyeimbangkan suasana hati dan emosi penderita depresi.
+                <br><br>
+                    Selain untuk menangani depresi, antidepresan juga bisa digunakan untuk mengatasi gangguan mental lain, seperti gangguan obsesif kompulsif (OCD), gangguan stress pascatrauma (PTSD), gangguan kecemasan umum, fobia, binge eating disorder, dan bulimia. Obat ini hanya boleh digunakan dengan resep dokter.
+                <br><br>
+                    Di samping untuk mengatasi gangguan mental, beberapa jenis antidepresan juga memiliki manfaat lain, misalnya untuk mengatasi masalah kulit, meredakan nyeri, dan mengatasi ejakulasi dini.
+                <br><br>
+                    Perlu dipahami, antidepresan tidak dapat menyembuhkan depresi. Obat ini hanya membantu mengendalikan atau meredakan gejala depresi, atau menurunkan tingkat keparahannya. Penderita yang satu mungkin memiliki kecocokan yang berbeda dengan penderita yang lain terkait jenis antidepresan untuk mengatasi kondisinya.
                 </p>
+
+                <br><br>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Peringatan Sebelum Menggunakan Antidepresan</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Ada beberapa hal yang harus diperhatikan sebelum menggunakan antidepresan, antara lain:</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li>1. Jangan menggunakan obat-obatan antidepresan jika Anda alergi terhadap obat ini.</li>
+                    <li>2. Beri tahu dokter jika Anda pernah atau sedang menderita gangguan hati, hipertensi, glaukoma, pembesaran prostat jinak, penyakit tiroid, gangguan perdarahan, porfiria, diabetes, penyakit jantung, gangguan ginjal, atau epilepsi.</li>
+                    <li>3. Konsultasikan dengan dokter terlebih dahulu sebelum memberikan antidepresan pada anak-anak usia di bawah 18 tahun.</li>
+                    <li>4. Jangan mengonsumsi minuman beralkohol selama menjalani pengobatan dengan antidepresan.</li>
+                    <li>5. Beri tahu dokter jika Anda pernah atau sedang memiliki kecanduan alkohol atau penyalahgunaan NAPZA.</li>
+                    <li>6. Jangan langsung melakukan aktivitas yang membutuhkan kewaspadaan, seperti mengemudikan kendaraan, setelah menggunakan antidepresan. Beberapa jenis antidepresan tertentu dapat menyebabkan kantuk pada sebagian orang.</li>
+                    <li>7. Jangan menghentikan pengobatan secara mendadak tanpa berkonsultasi dengan dokter, karena dapat menyebabkan perburukan gejala yang tadinya sudah membaik, atau menimbulkan gejala putus obat, seperti pusing, sakit kepala, nyeri otot, menggigil, mual, atau rasa seperti tersengat listrik.</li>
+                    <li>8. Beri tahu dokter jika Anda sedang mengonsumsi obat lain, termasuk produk herbal atau suplemen, untuk mengantisipasi terjadinya interaksi obat.</li>
+                    <li>9. Segera temui dokter jika terjadi reaksi alergi obat atau overdosis setelah menggunakan obat antidepresan.</li>
+                </ul>
+                <br><br>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Efek Samping dan Bahaya Antidepresan</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Antidepresan dapat menyebabkan efek samping yang berbeda-beda, tergantung pada  karakteristik masing-masing obat dan kondisi pasien. Berikut ini adalah beberapa efek samping yang mungkin muncul akibat penggunaan antidepresan:</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li>1. Sakit kepala</li>
+                    <li>2. Mual</li>
+                    <li>3. Berat badan bertambah</li>
+                    <li>4. Pusing</li>
+                    <li>5. Hilangnya hasrat seksual</li>
+                    <li>6. Sulit tidur atau insomnia</li>
+                    <li>7. Sembelit</li>
+                    <li>8. Diare</li>
+                    <li>9. Lelah</li>
+                    <li>10. Tremor</li>
+                </ul>
             </div>
         </section>
     </section>
