--- a/detail14.html
+++ b/detail14.html
@@ -29,6 +29,7 @@
         .heroes {
             position: relative;
             margin-bottom: 0;
+            /* Reset margin bottom */
             background-color: #ffffff;
         }
 
@@ -424,12 +425,12 @@
 
     <!-- Hero Section -->
     <section class="section heroes" aria-label="home">
-        <img src="assets/images/artikel1.png" alt="Banner Artikel">
+        <img src="assets/images/obat3.jpeg" alt="Banner Artikel">
         <div class="containers">
             <div class="hero-content">
-                <span class="garis">STRESS</span>
-                <h1 class="headline-lg hero-title text-center" data-reveal="left">Membangun Kepedulian Terhadap Kesehatan Mental</h1>
-                <p class="sub-hero">Dens > 26 Mei 2024 > 11,3rb Melihat</p>
+                <span class="garis">OBAT</span>
+                <h1 class="headline-lg hero-title text-center" data-reveal="left">Obat Aripiprazole</h1>
+                <p class="sub-hero">dr. Meva Nareza T > 23 Agustus 2023 > 16rb Melihat</p>
             </div>
             <ul class="social-list1">
                 <li><a href="#" class="social-link1"><ion-icon name="logo-facebook"></ion-icon></a></li>
@@ -442,31 +443,63 @@
         <!-- New Information Section -->
         <section class="article-info">
             <div class="container">
-                <h2 class="info-title">Hari Kesehatan Jiwa
-                    Sedunia</h2>
-                <p class="info-text" style="font-family: var(--ff-Oswald);">
-                    Menurut WHO, kesehatan mental atau Mental Health adalah keadaan sejahtera setiap individu, dalam
-                    mewujudkan potensi diri sendiri. Dalam perkembangannya, adanya kepedulian serta perhatian khusus
-                    yang diberikan oleh masyarakat, telah mendorong terciptanya gagasan WFMH (World Federation of Mental
-                    Health) untuk menetapkan Hari Kesehatan Jiwa Sedunia (HKJS) yang diperingati setiap tanggal 10
-                    Oktober sejak tahun 1992. <br> <br>
-
-                    Masih sama dengan 2 tahun kebelakang, bahwa perayaan Hari Kesehatan Mental Sedunia (World Mental
-                    Health Day) yang dilaksanakan pada tahun ini masih dalam situasi pandemi Covid-19, namun hal
-                    tersebut justru menjadi momentum tepat untuk mengkampanyekan kesadaran masyarakat bahwa menjaga
-                    kesehatan mental sama pentingnya dengan kesehatan fisik dalam hidup berdampingan dengan Covid-19.
-                    Dengan mengusung tema "Mental health care for all: let's make it a reality" atau "Perawatan
-                    kesehatan mental untuk semua: mari kita wujudkan.” Diharapkan menimbulkan kesadaran yang lebih
-                    kepada masyarakat mengenai penting nya menjaga dan memperhatikan kesehatan mental, agar stigma dan
-                    diskriminasi pada kesenjangan pengobatan dapat segera diperbaiki. <br><br>
-
-                    Masalah kesehatan jiwa dan mental masyarakat yang cenderung meningkat di masa pandemi COVID-19,
-                    membutuhkan kesadaran dan perhatian bersama. Upaya memelihara kesehatan mental dinilai penting guna
-                    menjaga imunitas tubuh. Sehingga dengan demikian, menjaga kesehatan mental di tengah pandemi
-                    Covid-19 dengan menerima dan tidak menyangkal fakta yang ada, serta usaha beradaptasi terhadap
-                    perubahan menjadi penting agar tidak menimbulkan kemungkinan gangguan kesehatan mental yang lebih
-                    serius.
+                <h2 class="info-title"> Aripiprazole </h2>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Aripiprazole adalah obat antipsikotik untuk meredakan gejala gangguan mental berat yang disebut skizofrenia. Obat ini juga bisa digunakan dalam pengobatan gangguan bipolar atau depresi berat.
+                <br><br>
+                    Aripiprazole bekerja dengan cara menyeimbangkan kadar serotonin dan dopamin, yaitu zat kimia di dalam otak yang ikut mengatur suasana hati dan perilaku. Dengan cara kerja ini, gejala psikosis, seperti halusinasi, perubahan emosi yang tiba-tiba, maupun gangguan dalam berperilaku dan cara berpikir bisa mereda.
+                <br><br>
+                    Pada penderita depresi, aripiprazole dapat meningkatkan efektivitas antidepresan. Obat ini juga dapat digunakan untuk mengontrol gejala sindrom Tourette atau gangguan perilaku yang berkaitan dengan sindrom autisme pada anak.
                 </p>
+
+                <br><br>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Peringatan Sebelum Menggunakan Aripiprazole</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Aripiprazole hanya boleh digunakan sesuai resep dokter. Hal-hal yang harus diperhatikan sebelum menggunakan obat ini antara lain:</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li>1. Beri tahu dokter tentang riwayat alergi yang dimiliki pasien. Aripiprazole tidak boleh digunakan oleh orang yang alergi terhadap obat ini.</li>
+                    <li>2. Aripirazole tidak boleh digunakan untuk mengatasi gejala psikosis akibat demensia.</li>
+                    <li>3. Informasikan kepada dokter bila pasien pernah atau sedang menderita penyakit kardiovaskular, termasuk penyakit jantung, gangguan irama jantung, serangan jantung, gagal jantung, stroke, hipertensi, atau hipotensi.</li>
+                    <li>4. Beri tahu dokter jika pasien pernah menderita penyakit ginjal, penyakit liver, gangguan pada prostat, penyakit Parkinsons, glaukoma, pheochromocytoma, myasthenia gravis, sleep apnea, epilepsi atau kejang, demensia, kolesterol tinggi, sel darah putih rendah, atau fenilketonuria.</li>
+                    <li>5. Beri tahu dokter bila pasien atau anggota keluarga pasien menderita diabetes atau gangguan mental lain, seperti depresi, gangguan bipolar, maupun gangguan obsesif kompulsif.</li>
+                    <li>6. Jangan langsung mengemudi atau melakukan aktivitas lain yang memerlukan kewaspadaan setelah menggunakan aripripazole, karena obat ini bisa menyebabkan kantuk, pusing, atau penglihatan buram.</li>
+                    <li>7. Beri tahu dokter mengenai penggunaan aripiprazole sebelum menjalani operasi atau perawatan gigi.</li>
+                    <li>8. Hindari beraktivitas terlalu lama di bawah paparan sinar matahari langsung selama menjalani terapi dengan aripripazole, karena obat ini dapat mengurangi kemampuan tubuh untuk berkeringat sehingga memicu terjadinya heatstroke.</li>
+                    <li>9. Segera temui dokter jika muncul reaksi alergi obat, efek samping yang serius, atau overdosis setelah menggunakan aripripazole.</li>
+                </ul>
+                <br><br>
+
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Dosis dan Aturan Pakai Aripiprazole</strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);">
+                    Berikut ini adalah dosis umum penggunaan aripripazole berdasarkan kondisi, bentuk obat, dan usia pasien:</p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Aripiprazole tablet atau oral solution<strong></p>
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Kondisi:</strong> Skizofrenia</p>
+                    <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                        <li><strong> • Dewasa:</strong> Dosis awal 10-15 mg, 1 kali sehari. Dosis pemeliharaan 15 mg, 1 kali sehari. Penyesuaian dosis dilakukan dengan jarak minimal 2 minggu. Dosis maksimal tidak lebih dari 30 mg per hari.</li>
+                        <li><strong> • Remaja usia ≥ 13 tahun:</strong> Dosis awal 2 mg untuk 2 hari pertama. Dosis ditingkatkan menjadi 5-10 mg, 1 kali sehari. Dosis maksimal adalah 30 mg per hari.</li>
+                    </ul>
+                
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Kondisi:</strong> Gangguan bipolar</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li><strong> • Dewasa:</strong> Sebagai terapi tunggal, dosis awal 15 mg, 1 kali sehari. Sebagai terapi tambahan bersama lithium atau valporate, dosis awal 10-15 mg, 1 kali sehari. Dosis dapat ditingkatkan sesuai kondisi pasien. Dosis maksimal 30 mg per hari.</li>
+                    <li><strong> • Anak usia > 10 tahun:</strong> Sebagai terapi tunggal atau terapi tambahan bersama lithium atau valporate, dosis awal 2 mg per hari, selama 2 hari pertama. Dosis ditingkatkan menjadi 5-10 mg per hari jika diperlukan. Dosis maksimal adalah 30 mg per hari.</li>
+                </ul>
+
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Kondisi:</strong> Depresi berat</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li><strong> • Dewasa:</strong>  Dosis awal 2-5 mg, 1 kali sehari. Dosis dapat ditingkatkan secara bertahap hingga 5 mg dengan interval minimal 1 minggu setelah dosis awal. Dosis maksimal 15 mg per hari.</li>
+                </ul>
+
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Kondisi:</strong> Gangguan bipolar</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li><strong> • Anak usia ≥ 6 tahun dengan berat badan ≤ 50 kg: </strong> 2 mg per hari, selama 2 hari pertama, lalu ditingkatkan menjadi 5 mg per hari. Jika keluhan belum membaik, dosis dapat ditingkatkan secara perlahan hingga 10 mg per hari.</li>
+                    <li><strong> • Anak usia ≥ 6 tahun dengan berat badan ≥ 50 kg:</strong> 2 mg per hari, selama 2 hari pertama, lalu 5 mg per hari selama 5 hari selanjutnya. Dosis ditingkatkan secara bertahap hingga mencapai 10 mg per hari. Dosis maksimal 20 mg per hari.</li>
+                </ul>
+
+                <p class="info-text" style="font-family: var(--ff-Oswald);"><strong>Kondisi:</strong> Gangguan mood dan perilaku akibat autisme</p>
+                <ul class="info-list" style="font-family: var(--ff-Oswald);"> 
+                    <li><strong> • Anak usia ≥ 6 tahun:</strong>  2-5 mg per hari. Dosis maksimal adalah 15 mg per hari.</li>
+                </ul>
+
+                <p class="info-text" style="font-family: var(--ff-Oswald);">Sementara itu, aripiprazole dalam bentuk suntik diberikan langsung oleh dokter atau petugas medis dalam pengawasan dokter. Aripiprazole suntik digunakan untuk menangani kondisi gaduh gelisah pada pasien skizofrenia atau gangguan bipolar episode mania.</p>
             </div>
         </section>
     </section>
