--- a/detail3.html
+++ b/detail3.html
@@ -429,8 +429,7 @@
         <div class="containers">
             <div class="hero-content">
                 <span class="garis">STRESS</span>
-                <h1 class="headline-lg hero-title text-center" data-reveal="left">Penting! Berikut 5 Cara Menjaga
-                    Kesehatan Mental, Gen Z Wajib Simak!</h1>
+                <h1 class="headline-lg hero-title text-center" data-reveal="left">5 Cara Menjaga Kesehatan Mental, Gen Z Wajib Simak!</h1>
                 <p class="sub-hero">Meilani > 10 Juni 2024 > 16rb Melihat</p>
             </div>
             <ul class="social-list1">
