--- a/result.html
+++ b/result.html
@@ -601,23 +601,23 @@
                 <p>Baca lebih lanjut artikel berikut:</p>
                 <div class="content-item">
                     <img src="assets/images/1.png" alt="Content Image 1">
-                    <p>Stres Di Tengah Pandemi Virus Corona? Ini 3 Tips Mengatasinya</p>
-                    <p class="sub-judul">STRES</p>
+                    <p>Tips Mengatasi Stres</p>
+                    <p class="sub-judul"><a href="detail8.html">Baca</a></p>
                 </div>
                 <div class="content-item">
                     <img src="assets/images/2.png" alt="Content Image 2">
-                    <p>Stres Bisa Buat Uban Cepat Muncul, Apakah Benar?</p>
-                    <p class="sub-judul">STRES</p>
+                    <p>Tips dan Trik</p>
+                    <p class="sub-judul"><a href="detail2.html">Baca</a></p>
                 </div>
                 <div class="content-item">
                     <img src="assets/images/3.png" alt="Content Image 3">
-                    <p>Jangan Abaikan Stres, Ini Cara Mengatasinya Agar Stress Bisa Turun</p>
-                    <p class="sub-judul">STRES</p>
+                    <p>Gen Z Wajib Simak!</p>
+                    <p class="sub-judul"><a href="detail3.html">Baca</a></p>
                 </div>
                 <div class="content-item">
                     <img src="assets/images/4.png" alt="Content Image 4">
-                    <p>Perlu Tahu, Ini Cara Cepat Untuk Meredakan Stres</p>
-                    <p class="sub-judul">STRES</p>
+                    <p>Penyebab Kesehatan Mental?</p>
+                    <p class="sub-judul"><a href="detail7.html">Baca</a></p>
                 </div>
                 <a href="artikel.html"><button>Lihat Semua Artikel</button></a>
             </div>
