--- a/chat.html
+++ b/chat.html
@@ -49,10 +49,10 @@
             font-weight: bold;
         }
         .chat-header .avatar img {
-            width: 100%; /* Mengisi seluruh container avatar */
-            height: 100%; /* Mengisi seluruh container avatar */
-            object-fit: cover; /* Menjaga aspek rasio gambar */
-            border-radius: 50%; /* Membuat gambar tetap berbentuk lingkaran */
+            width: 100%; 
+            height: 100%; 
+            object-fit: cover; 
+            border-radius: 50%;
         }
         .chat-box {
             flex: 1;
@@ -142,27 +142,27 @@
         const doctorDetails = {
             "maya": {
                 name: "Dr. Maya Santaso",
-                avatar: "assets/images/psikolog2.jpeg" // Gambar avatar Dr. Maya
+                avatar: "assets/images/psikolog2.jpeg" 
             },
             "gaby": {
                 name: "Dr. Gaby Corella",
-                avatar: "assets/images/psikolog7.png" // Gambar avatar Dr. Gaby
+                avatar: "assets/images/psikolog7.png" 
             },
             "cindy": {
                 name: "Dr. Cindy Wijaya",
-                avatar: "assets/images/psikolog3.jpeg" // Gambar avatar Dr. Cindy
+                avatar: "assets/images/psikolog3.jpeg" 
             },
             "jennifer": {
                 name: "Dr. Jennifer Connelly",
-                avatar: "assets/images/psikolog4.jpeg" // Gambar avatar Dr. Jennifer
+                avatar: "assets/images/psikolog4.jpeg" 
             },
             "budi": {
                 name: "Dr. Budi Prasetyo",
-                avatar: "assets/images/psikolog5.jpeg" // Gambar avatar Dr. Budi
+                avatar: "assets/images/psikolog5.jpeg" 
             },
             "anna": {
                 name: "Dr. Anna Susanti",
-                avatar: "assets/images/psikolog6.png" // Gambar avatar Dr. Anna
+                avatar: "assets/images/psikolog6.png" 
             }
         };
 
