--- a/login.html
+++ b/login.html
@@ -32,16 +32,16 @@
           <a href="home.html"><input type="submit" value="Login" class="btn solid" /></a>
           <p class="social-text">Atau masuk dengan akun sosial media</p>
           <div class="social-media">
-            <a href="#" class="social-icon">
+            <a href="https://www.facebook.com" class="social-icon" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.twitter.com" class="social-icon" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.google.com" class="social-icon" target="_blank">
               <i class="fab fa-google"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com" class="social-icon" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
@@ -63,16 +63,16 @@
           <input type="submit" class="btn" value="Sign up" />
           <p class="social-text">Atau daftar dengan akun sosial media</p>
           <div class="social-media">
-            <a href="#" class="social-icon">
+            <a href="https://www.facebook.com" class="social-icon" target="_blank">
               <i class="fab fa-facebook-f"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.twitter.com" class="social-icon" target="_blank">
               <i class="fab fa-twitter"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.google.com" class="social-icon" target="_blank">
               <i class="fab fa-google"></i>
             </a>
-            <a href="#" class="social-icon">
+            <a href="https://www.linkedin.com" class="social-icon" target="_blank">
               <i class="fab fa-linkedin-in"></i>
             </a>
           </div>
