--- a/artikel.html
+++ b/artikel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card Example</title>
+    <title>Sejenak - Artikel</title>
     <meta name="title" content="Card Example">
     <meta name="description" content="Description of the card example">
     <link rel="preconnect" href="https://fonts.googleapis.com">
