--- a/aboutus.html
+++ b/aboutus.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Arti - home</title>
+    <title>Sejenak - Tentang Kami</title>
     <meta name="title" content="Doclab - home">
     <meta name="description">
     <link rel="preconnect" href="https://fonts.googleapis.com">
