--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <!-- 
     - primary meta tags
   -->
-  <title>Arti - home</title>
+  <title>Sejenak - home</title>
   <meta name="title" content="Arti- home">
   <meta name="description">
 
@@ -41,7 +41,7 @@
     <div class="container">
 
       <a href="#" class="logo">
-        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="100" alt="Arti home">
+        <img src="assets/images/logo_sejenak-removebg-preview.png" width="100" height="100" alt="Sejenak home">
       </a>
 
       <nav class="navbar" data-navbar>
